# document-ia

./: .buildpacks  .cursorrules  .env.test  .gitignore  .pre-commit-config.yaml  .project-file  Demo YoloE.ipynb  Procfile  README.md  TODO.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml  pyrightconfig.json
document-ia-api/: Procfile  README.md  alembic.ini  embeddingsCni.txt  migration.sql  pyproject.toml
document-ia-api/alembic/: README.md  env.py
document-ia-api/alembic/versions/: 19d1c6ddd15d_create_organization_api_key_and_webhook_.py  4f4ecb83db27_create_document_ia_organization_and_.py  50d8532eeb5b_add_ocr_type_to_document_template_.py  5876b08c4f42_create_event_store_table.py  659b01a59fc4_add_anonymization_field_on_event_store.py  9f3c1a2b7d84_drop_version_from_event_store.py  b1d2a3c4e5f6_enable_pgvector_extension.py  c3f4a5b6d7e8_create_document_template_embedding_table.py
document-ia-api/bruno-api/: README.md
document-ia-api/bruno-api/Document IA/: bruno.json
document-ia-api/bruno-api/Document IA/Albert/: folder.bru
document-ia-api/bruno-api/Document IA/albert-api/: folder.bru
document-ia-api/bruno-api/Document IA/embedding/: folder.bru  jina-embedding.bru
document-ia-api/bruno-api/Document IA/environments/: Albert.bru  Local.bru  Production.bru  Sandbox.bru  Staging.bru
document-ia-api/docs/: API_SUMMARY.md  RATE_LIMITING.md  WORKFLOW_EXECUTION_API.md
document-ia-api/scripts/: generate_api_key.py
document-ia-api/src/: aggregator.jsonl  main.py
document-ia-api/src/api/: auth.py  config.py  rate_limiting.py  routes.py
document-ia-api/src/api/contracts/: common.py  workflow.py
document-ia-api/src/api/routes/: __init__.py  main.py
document-ia-api/src/application/: __init__.py
document-ia-api/src/application/services/: event_store_service.py  workflow_service.py
document-ia-api/src/core/: auth.py  config.py  file_validator.py
document-ia-api/src/core/exceptions/: http_exceptions.py
document-ia-api/src/document_ia_api/: main.py
document-ia-api/src/document_ia_api/api/: aggregator_middleware.py  auth.py  config.py  rate_limiting.py  routes.py
document-ia-api/src/document_ia_api/core/: config.py  file_validator.py  logging_setup.py
document-ia-api/src/document_ia_api/infra/: config.py  database_service.py  redis_service.py  s3_service.py  schemas.py  webhook_notification_service.py
document-ia-api/src/document_ia_api/schemas/: events.py  file_not_valid_information.py  rate_limiting.py  workflow.py
document-ia-api/src/infra/: config.py  redis_service.py  s3_service.py  schemas.py
document-ia-api/src/infra/database/: database.py  migration_service.py
document-ia-api/src/infra/redis/: consumer.py  publisher.py  redis_connectivity_status.py
document-ia-api/src/schemas/: events.py  workflow.py
document-ia-api/tests/: README.md  __init__.py  conftest.py  pytest.ini  test_api_authentication.py  test_rate_limiting.py  test_workflow_execution.py
document-ia-api/tests/api/: test_health_check.py  test_workflow_execution.py
document-ia-api/tests/document_ia_api/: conftest.py  test_rate_limiting.py
document-ia-api/tests/document_ia_api/api/: test_api_authentication.py  test_api_keys.py  test_auth.py  test_executions.py  test_extraction_schemas.py  test_health_check.py  test_organizations.py  test_webhooks.py  test_workflow_execution.py
document-ia-api/tests/document_ia_api/integration/: test_event_store_integration.py  test_s3_service.py  test_simple_stream_consumer_webhook.py
document-ia-api/tests/document_ia_api/unit/: test_aggregator_middleware.py  (+5 more)
document-ia-api/tests/integration/: test_event_store_integration.py  test_s3_service.py
document-ia-api/tests/unit/: test_event_store_repository.py  test_event_store_service.py  test_file_validator.py  test_workflow_repository.py
document-ia-evals/: .env.example  .gitignore  Caddyfile.template  METRICS.md  Makefile  Procfile  README.md  TODO.md  alembic.ini  app.py  pyproject.toml  pyrightconfig.json  start_evals.sh
document-ia-evals/alembic/: env.py
document-ia-evals/alembic/versions/: 001_initial_schema.py  002_add_model_version_stats.py
document-ia-evals/metrics/: __init__.py  json_schema_extra.py  llm_structured_output.py
document-ia-evals/notebooks/: create-dataset-avis-imposition.ipynb
document-ia-evals/pages/: 1_📊_Dashboard.py  2_🎯_New_Experiment.py  3_📈_Experiment_Results.py  4_📚_Experiment_History.py  5_🔧_Create_Dataset.py  6_🔍_Parse_Document.py  7_📼_Retrieve_Past_Execution.py  8_🔄_Run_Workflow_On_Dataset.py
document-ia-evals/scripts/: setup_database.py  setup_db.sh
document-ia-evals/src/components/: sidebar.py
document-ia-evals/src/database/: __init__.py  connection.py  models.py
document-ia-evals/src/document_ia_evals/: app.py
document-ia-evals/src/services/: __init__.py  experiment_service.py
document-ia-evals/src/utils/: config.py
document-ia-infra/: README.md  pyproject.toml
document-ia-infra/src/document_ia_redis/: consumer.py  publisher.py  redis_manager.py  redis_settings.py  serializable_message.py
document-ia-infra/tests/: conftest.py
document-ia-infra/tests/document_ia_redis/: test_redis_manager.py
document-ia-worker/: Procfile  README.md  cron.json  pyproject.toml
document-ia-worker/src/document_ia_task_scheduler/: __init__.py
document-ia-worker/src/document_ia_worker/: main.py
document-ia-worker/tests/: conftest.py
document-ia-worker/tests/fixtures/: ocr_result_cni.json  regenerate_extraction_prompt_fixtures.py
document-ia-worker/tests/integration/: test_download_file_step_integration.py  test_llm_classification_integration.py  test_llm_extract_openai_integration.py  test_workflow_classification_e2e.py  test_workflow_edge_cases_e2e.py  test_workflow_extraction_e2e.py
document-ia-worker/tests/unit/: test_deepseek_ocr_service.py  test_extract_content_ocr_step.py  test_llm_extract.py  test_marker_service.py  test_mistral_ocr_service.py  test_nanonets_service.py  test_preprocess_file_step.py  test_prompt_service.py  test_save_workflow_result_step.py  test_workflow_manager.py
(+383 files in other folders)
