[project]
name = "document-ia-evals"
version = "0.1.0"
description = ""
authors = [
    {name = "Erwan BOEHM",email = "erwan.boehm@gmail.com"},
    {name = "Olivier DULCY",email = "olivier.dulcy@beta.gouv.fr"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "streamlit (>=1.51.0,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "plotly (>=6.4.0,<7.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "label-studio-sdk (>=2.0.13,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "urllib3 (>=2.5.0,<3.0.0)",
    "deepdiff (>=8.1.1,<9.0.0)",
    "sqlalchemy (>=2.0.23,<3.0.0)",
    "alembic (>=1.13.0,<2.0.0)",
    "psycopg2-binary (>=2.9.9,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
