[tool.poetry]
name = "document-ia-infra"
version = "0.1.0"
description = "Code des briques d'infrastructure pour Document IA"
authors = ["Nicolas Sagon <nicolas.sagon@beta.gouv.fr>"]
readme = "README.md"
packages = [
    { include = "document_ia_infra", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
redis = "^5.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.11"
pytest = "^8.4.1"
pytest-asyncio = "^0.23.0"
pydantic-settings = "^2.1.0"
pre-commit = "^3.6.0"
pyright = "^1.1.405"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_mode = "auto"
